--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 *.iml
-.gradle
+/.gradle
 /local.properties
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
+/.idea
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+/gradle
+/UIRouterTable
+gradlew
+gradlew.bat
