--- a/config.gradle
+++ b/config.gradle
@@ -10,35 +10,50 @@ ext {
     //Android配置版本号 和 一些公共库组的版本号(两个或两个以上的库用到的相同版本号)
     versions = [
 
-            compileSdkVersion: 26,        //用来编译项目的Sdk版本号
-            buildToolsVersion: '27.0.3',  //构建工具版本号
-            minSdkVersion    : 15,        //支持的最低Sdk版本号
-            targetSdkVersion : 26,        //目标Sdk版本号
+            compileSdkVersion  : 26,        //用来编译项目的Sdk版本号
+            buildToolsVersion  : '27.0.3',  //构建工具版本号
+            minSdkVersion      : 17,        //支持的最低Sdk版本号
+            targetSdkVersion   : 26,        //目标Sdk版本号
 
-            kotlin_version   : '1.2.51',  //kotlin相关库的版本号
-            support_version  : '27.1.1'   //Android兼容包版本号
+            kotlin_version     : '1.2.51',  //kotlin相关库的版本号
+            support_version    : '27.1.1',  //Android兼容包版本号
+            retrofit_version   : '2.4.0',   //Retrofit版本号
+            okhttp_version     : '3.11.0',  //Okhttp版本号
+            butterknife_version: '8.4.0',   //butterknife版本号
+            rxlifecycle_version: '2.2.2'    //rxlifecycle版本号
     ]
 
     //Android项目常用的 系统库 和 三方库
     libs = [
-            jimu_component_lib       : 'com.github.jimu:componentlib:1.3.2-alpha',                             //积木组件库(一个比较彻底的组件化方案)，定义了Router和UiRouter
-            jimu_annotation_processor: 'com.github.jimu:router-anno-compiler:1.0.1',                           //积木注解解析库，用来解析RouterNode和Autowired
+            jimu_component_lib              : 'com.github.jimu:componentlib:1.3.2-alpha',                                        //积木组件库(一个比较彻底的组件化方案)，定义了Router和UiRouter
+            jimu_annotation_processor       : 'com.github.jimu:router-anno-compiler:1.0.1',                                      //积木注解解析库，用来解析RouterNode和Autowired
 
-            kotlin_stdlib_jdk8       : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin_version}",   //kotlin 标准库 jdk8
-            kotlin_stdlib            : "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin_version}",        //kotlin 标准库
-            kotlin_anko              : 'org.jetbrains.anko:anko:0.10.5',                                       //kotlin 扩展库anko
+            kotlin_stdlib_jdk8              : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin_version}",              //kotlin 标准库 jdk8
+            kotlin_stdlib                   : "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin_version}",                   //kotlin 标准库
+            kotlin_anko                     : 'org.jetbrains.anko:anko:0.10.5',                                                  //kotlin 扩展库anko
 
-            support_annotation       : "com.android.support:support-annotations:${versions.support_version}",  //Android 注解库
-            supportv7                : "com.android.support:appcompat-v7:${versions.support_version}",         //Android V7兼容库
-            supportv7_recyclerview   : "com.android.support:recyclerview-v7:${versions.support_version}",      //Android RecyclerView
-            support_design           : "com.android.support:design:${versions.support_version}",               //Android Ui库Material Design
-            supoortv7_cardview       : "com.android.support:cardview-v7:${versions.support_version}",          //Android CardView，可以做圆角、阴影效果
-            constraint               : 'com.android.support.constraint:constraint-layout:1.1.2',               //Android 约束布局
-            supportv4                : 'com.android.support:support-v4:25.3.1',                                //Android V4兼容库
-            rxjava                   : 'io.reactivex:rxjava:1.1.6',                                            //Rxjava标准库
-            //rxandroid                : 'io.reactivex:rxandroid:1.2.1',                                         //Rxandroid库
-            //rxbinding                : 'com.jakewharton.rxbinding:rxbinding:0.4.0'                             //Rxbinding库
-            smart_refresh_layout     : 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3',                     //流行的刷新控件
-            logger                   : 'com.orhanobut:logger:2.2.0',                                           //一款流行的日志控件
+            support_annotation              : "com.android.support:support-annotations:${versions.support_version}",             //Android 注解库
+            supportv7                       : "com.android.support:appcompat-v7:${versions.support_version}",                    //Android V7兼容库
+            supportv7_recyclerview          : "com.android.support:recyclerview-v7:${versions.support_version}",                 //Android RecyclerView
+            support_design                  : "com.android.support:design:${versions.support_version}",                          //Android Ui库Material Design
+            supoortv7_cardview              : "com.android.support:cardview-v7:${versions.support_version}",                     //Android CardView，可以做圆角、阴影效果
+            constraint                      : 'com.android.support.constraint:constraint-layout:1.1.2',                          //Android 约束布局
+            supportv4                       : 'com.android.support:support-v4:25.3.1',                                           //Android V4兼容库
+            rxandroid                       : 'io.reactivex.rxjava2:rxandroid:2.1.0',                                            //Rxandroid库
+            rxpermission                    : 'com.github.tbruyelle:rxpermissions:0.10.2',                                       //Rxbinding库
+            rxlifecycle_component           : "com.trello.rxlifecycle2:rxlifecycle-components:${versions.rxlifecycle_version}",  //rxlifecycle组件库，定义了RxAppCompatActivity,RxFragment等组件，内部引用了基础库和安卓库
+            rxlifecycle_navi                : "com.trello.rxlifecycle2:rxlifecycle-navi:${versions.rxlifecycle_version}",        //Android使用的标准库，继承NaviActivity
+            rxjava                          : 'io.reactivex.rxjava2:rxjava:2.2.1',                                               //Rxjava2标准库
+            retrofit                        : "com.squareup.retrofit2:retrofit:${versions.retrofit_version}",                    //Retrofit2标准库
+            retrofit_rxjava_adapter         : "com.squareup.retrofit2:adapter-rxjava2:${versions.retrofit_version}",             //retrofit兼容rxjava的适配器
+            retrofit_gson_convert           : "com.squareup.retrofit2:converter-gson:${versions.retrofit_version}",              //retrofit的jackson数据转换器
+            okhttp                          : "com.squareup.okhttp3:okhttp:${versions.okhttp_version}",                          //OKhttp标准库
+            okhttp_loggin_interceptor       : "com.squareup.okhttp3:logging-interceptor:${versions.okhttp_version}",             //日志拦截器
+            smart_refresh_layout            : 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3',                                //流行的刷新控件
+            logger                          : 'com.orhanobut:logger:2.2.0',                                                      //一款流行的日志控件
+            eventbus                        : 'org.greenrobot:eventbus:3.1.1',                                                   //解决不同之间的通信（刷新，进行某个操作）
+            butterknife                     : "com.jakewharton:butterknife:${versions.butterknife_version}",                     //Butterknife标准库
+            butterknife_annotation_processor: "com.jakewharton:butterknife-compiler:${versions.butterknife_version}",            //Butterknife注解解析库
+            jackson_core                    : 'com.fasterxml.jackson.core:jackson-databind:2.9.5',                               //jackson库
     ]
 }
