引入部分工具类，开始用该框架做一个简单的demo

--- a/basiclib/src/main/AndroidManifest.xml
+++ b/basiclib/src/main/AndroidManifest.xml
@@ -1,2 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="basic.app.com.basiclib" />
+    package="basic.app.com.basiclib">
+
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+</manifest>
