--- a/user/src/main/AndroidManifest.xml
+++ b/user/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="basic.app.com.user">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -6,7 +7,6 @@
 
     <application
         android:allowBackup="true"
-        android:label="@string/user_app_name"
         android:supportsRtl="true">
         <activity android:name=".view.activity.LoginActivity" />
     </application>
