调试user模块单独打包

--- a/user/src/main/runalone/AndroidManifest.xml
+++ b/user/src/main/runalone/AndroidManifest.xml
@@ -15,13 +15,18 @@
         android:supportsRtl="true"
         android:theme="@style/user_AppTheme"
         tools:replace="android:label">
-        <activity android:name=".view.activity.LoginActivity">
+        <activity
+            android:name=".runalone.activity.UserInfoActivity"
+            android:label="用户信息"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".view.activity.LoginActivity" />
     </application>
 
 </manifest>
